<resources>
    <string name="app_name" translatable="false">TalKey</string>
    <string name="sign_up">Registrarse</string>
    <string name="log_in">Iniciar sesión</string>
    <string name="hint_email">Correo</string>
    <string name="hint_nick">Nick</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar contraseña</string>
    <string name="img_profile_description">La imagen de perfil del usuario</string>
    <string name="save">Guardar cambios</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="hint_message">Mensaje</string>
    <string name="contacts">Contactos</string>
    <string name="chats">Chats</string>
    <string name="edtiProfile">Editar perfil</string>
    <string name="logout">Cerrar sesión</string>
    <string name="status_online" translatable="false">Online</string>
    <string name="status_offline" translatable="false">Offline</string>
    <string name="camera_button">Cámara</string>
    <string name="gallery_button">Galería</string>
    <string name="photo_upload_error">No se pudo subir el avatar</string>
    <string name="profile_updated">Perfil actualizado</string>
    <string name="fill_all_fields">Rellena todos los campos</string>
    <string name="user_exists">El usuario ya existe</string>
    <string name="user_does_not_exists">El usuario no existe</string>
    <string name="status_update_error">No fue posible cambiar el status de usuario</string>
    <string name="invalid_password">Contraseña inválida</string>
    <string name="passwords_dont_match">Las contraseñas no coinciden</string>
    <string name="password_requirements">La contrasña debe contener 8 carácteres, una letra mayúscula, un número y un carácter especial</string>
    <string name="delete_confirmation_title">Confirmación de borrado</string>
    <string name="delete_confirmation_question">¿Estás seguro de que quieres eliminar este chat?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="check_your_email_and_password">Comprueba el usuario y la contraseña</string>
    <string name="enter_a_valid_email">Introduce un email válido</string>
    <string name="accept_our_terms_and_conditions">Acepta los términos y condiciones</string>
    <string name="biometric_sensor_doesnt_exist">No se encuenta el sensor biométrico</string>
    <string name="biometric_sensor_not_available">Sensor biométrico no disponible</string>
    <string name="connection_with_sensor_not_available">Conexión con el sensor biométrico fallida</string>
    <string name="fingerprint_mismatch">La huella no coincide</string>
    <string name="use_fingerprint_login">Usa tu huella para acceder a la aplicación</string>
    <string name="cancel">Cancelar</string>
    <string name="login_title">Inicio de sesión</string>
    <string name="unknown_account">Cuenta desconocida</string>
    <string name="biometric_accunt_link_question">¿Quieres asociar esta cuenta a tu sensor biométrico?</string>
    <string name="biometric_account_linked">Se ha asociado esta cuenta a su huella</string>
    <string name="saySomethingTo">Dile algo a %1$s!</string>
    <string name="deleteChatSuccessfull">Chat borrado con éxito</string>
    <string name="password_updated">Contraseña Actualizada</string>
    <string name="password_error">No se pudo cambiar la contraseña</string>
    <string name="date_formater">%3$s-%2$s-%1$s</string>
    <string name="manualLoginAdvise">Por motivos de seguridad, debes iniciar sesión manualmente</string>
    <string name="notNotificationAdvise">No podrás recibir avisos cuando te escriban</string>
    <string name="default_channel" translatable="false">generic</string>
    <string name="profile_title">Perfil</string>
</resources>