<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LogInFragment"
    android:background="@drawable/login_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivLogoTalKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:importantForAccessibility="no"
            android:src="@drawable/logo_talkey"
            app:layout_constraintStart_toEndOf="@id/ivTalKeyVassCompany"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivTalKeyVassCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/talkey_vasscompany"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogoTalKey" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            style="@style/textBox"
            android:layout_marginTop="46dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivTalKeyVassCompany" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNick"
            style="@style/textBox"
            android:layout_marginTop="@dimen/common_margin"
            android:hint="@string/hint_nick"
            android:inputType="text"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            app:layout_constraintTop_toBottomOf="@id/etNick">

            <TextView
                android:id="@+id/tvPasswordRequirements"
                style="@style/passwordRequirements"
                tools:text="@string/password_requirements"
                app:layout_constraintBottom_toBottomOf="@id/etPassword"
                app:layout_constraintStart_toStartOf="@id/etPassword"
                app:layout_constraintEnd_toEndOf="@id/etPassword" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                style="@style/passwordBox"
                android:padding="@dimen/common_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <CheckBox
                android:id="@+id/chbShowPasswdText"
                style="@style/passwordCheckBox"
                app:layout_constraintTop_toTopOf="@id/etPassword"
                app:layout_constraintBottom_toBottomOf="@id/etPassword"
                app:layout_constraintEnd_toEndOf="@id/etPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etConfirmPassword"
            style="@style/passwordBox"
            android:layout_marginTop="@dimen/common_margin"
            android:hint="@string/hint_confirm_password"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clPassword" />

        <CheckBox
            android:id="@+id/chbShowConfirmPasswdText"
            style="@style/passwordCheckBox"
            app:layout_constraintTop_toTopOf="@id/etConfirmPassword"
            app:layout_constraintBottom_toBottomOf="@id/etConfirmPassword"
            app:layout_constraintEnd_toEndOf="@id/etConfirmPassword" />

        <CheckBox
            android:id="@+id/cbTermsConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:buttonTint="@color/white"
            android:text="@string/accept_our_terms_and_conditions"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAccept"
            style="@style/button"
            android:layout_marginTop="48dp"
            android:text="@string/log_in"
            app:layout_constraintBottom_toTopOf="@id/btnChange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cbTermsConditions" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChange"
            style="@style/button"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/invisible"
            android:text="@string/sign_up"
            android:textColor="@color/vassBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnAccept" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnFingerPrint"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:clickable="true"
            android:elevation="8dp"
            app:cardCornerRadius="50dp"
            android:layout_marginTop="@dimen/common_margin"
            app:layout_constraintTop_toBottomOf="@id/btnChange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_fingerprint"
                android:scaleType="centerCrop"
                android:layout_gravity="center" />
        </com.google.android.material.card.MaterialCardView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminateTint="@color/vassBlue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>