<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.password_change.PasswordChangeFragment"
    android:id="@+id/constraintLayoutPassword">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/vassBlue"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/profile_title"
        app:titleTextColor="@android:color/white" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cancelButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/x"
        app:layout_constraintTop_toTopOf="@id/toolBar"
        app:layout_constraintBottom_toBottomOf="@id/toolBar"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgProfileBackground"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:shapeAppearanceOverlay="@style/circleImageViewShape" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgProfile"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:shapeAppearanceOverlay="@style/circleImageViewShape" />

    <TextView
        android:id="@+id/tvNicknameLabel"
        style="@style/text"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/hint_password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgProfile" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvNicknameLabel">

        <TextView
            android:id="@+id/tvPasswordRequirements"
            style="@style/passwordRequirements"
            tools:text="@string/password_requirements"
            app:layout_constraintBottom_toBottomOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="@id/etPassword"
            app:layout_constraintEnd_toEndOf="@id/etPassword" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            style="@style/passwordBox"
            android:padding="@dimen/common_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <CheckBox
            android:id="@+id/chbShowPasswdText"
            style="@style/passwordCheckBox"
            app:layout_constraintTop_toTopOf="@id/etPassword"
            app:layout_constraintBottom_toBottomOf="@id/etPassword"
            app:layout_constraintEnd_toEndOf="@id/etPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="clPassword" />


    <TextView
        android:id="@+id/tvLoginLabel"
        style="@style/text"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/hint_confirm_password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierNickname" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPasswordConfirm"
        style="@style/passwordBox"
        android:layout_marginTop="@dimen/minimal_margin"
        android:hint="@string/hint_confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginLabel" />

    <CheckBox
        android:id="@+id/chbShowConfirmPasswdText"
        style="@style/passwordCheckBox"
        app:layout_constraintTop_toTopOf="@id/etPasswordConfirm"
        app:layout_constraintBottom_toBottomOf="@id/etPasswordConfirm"
        app:layout_constraintEnd_toEndOf="@id/etPasswordConfirm" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="etPasswordConfirm" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAccept"
        style="@style/button"
        android:layout_marginBottom="48dp"
        android:text="@string/change_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>