<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_to_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/vassBlue"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="28sp"
                tools:ignore="TextContrastCheck"
                tools:layout_editor_absoluteX="166dp"
                tools:layout_editor_absoluteY="13dp" />

            <ImageButton
                android:id="@+id/icSearch"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end|center_vertical"
                android:background="@color/transparent"
                android:importantForAccessibility="no"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_search"
                tools:ignore="ImageContrastCheck,TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="369dp"
                tools:layout_editor_absoluteY="17dp" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ToggleButton
            android:id="@+id/tbContacts"
            style="@style/toggleBtnLists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:textOff="@string/contacts"
            android:textOn="@string/contacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            tools:ignore="TextContrastCheck" />

        <ToggleButton
            android:id="@+id/tbChats"
            style="@style/toggleBtnLists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chats"
            android:textOff="@string/chats"
            android:textOn="@string/chats"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            tools:ignore="TextContrastCheck" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierToogleButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tbContacts,tbChats" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrierToogleButtons" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            tools:listitem="@layout/item_recyclerview_user" />

        <View
            android:id="@+id/loadingBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/barrierToogleButtons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/vassBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>